<resources>
    <string name="app_name">NYT Latest News</string>
    <string name="article_title">Title</string>
    <string name="article_date">Date</string>
    <string name="article_author">Author</string>
    <string name="article_content">Content</string>
    <string name="facebook_app_id">524135594459226</string>
    <string name="logo_desc">App logo</string>
    <string name="snippet">Snippet</string>
    <string name="top_stories">Top Stories</string>
    <string name="most_popular">Most Popular</string>
    <string name="opinion">Opinion</string>
    <string name="world">World</string>
    <string name="us">U.S.</string>
    <string name="business_day">Business Day</string>
    <string name="sports">Sports</string>
    <string name="arts">Arts</string>
    <string name="new_york">New York</string>
    <string name="magazine">Magazine</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="preferences">Preferences</string>
    <string name="search_articles">Search Articles</string>
    <string name="enter_keywords">Enter keywords</string>
    <string name="fb_login_protocol_scheme">524135594459226</string>
</resources>

