<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <ImageView
                android:id="@+id/image_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                />

            <TextView
                android:id="@+id/title_text_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_recycler"
                android:text="@string/article_title"
                />

            <TextView
                android:id="@+id/author_text_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_text_recycler"
                android:hint="@string/article_author"
                />

            <TextView
                android:id="@+id/date_text_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_text_recycler"
                android:layout_marginLeft="50sp"
                android:layout_toEndOf="@id/author_text_recycler"
                android:hint="@string/article_date"
                />

            <TextView
                android:id="@+id/snippet_text_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/author_text_recycler"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/snippet"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>