<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_article"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_text_article"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_title"
                    android:layout_marginTop="10dp"
                    android:textSize="26sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/author_text_article"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/article_author"/>

                <TextView
                    android:id="@+id/content_text_article"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/snippet"/>

                <TextView
                    android:id="@+id/date_text_article"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="13sp"
                    android:hint="@string/article_date"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>